--- a/angular/index.html
+++ b/angular/index.html
@@ -10,17 +10,18 @@
         <!--<link rel="apple-touch-icon" href="apple-touch-icon.png">-->
         <!-- Place favicon.ico in the root directory -->
 
-        <!--<link rel="stylesheet" href="css/normalize.css">-->
-        <!--<link rel="stylesheet" href="css/main.css">-->
-        <!--<script src="js/vendor/modernizr-2.8.3.min.js"></script>-->
+        <link rel="stylesheet" href="css/styles.min.css">
     </head>
     <body>
-        <div ng-view></div>
-        <!--<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>-->
-        <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>-->
-        <!--<script src="js/plugins.js"></script>-->
-        <!--<script src="js/main.js"></script>-->
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <header></header>
+        <div class="fr-content">
+            <div class="container">
+                <div ng-view></div>
+            </div>
+        </div>
+        <footer></footer>
+        <script src="js/libs/libs.min.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/routes.js"></script>
     </body>
 </html>
