continue working on angular<->symfony

--- a/angular/index.html
+++ b/angular/index.html
@@ -23,5 +23,7 @@
         <script src="js/libs/libs.min.js"></script>
         <script src="js/app.js"></script>
         <script src="js/routes.js"></script>
+        <script src="js/controllers/shelfIndexController.js"></script>
+        <script src="js/controllers/shelfShowController.js"></script>
     </body>
 </html>
